<resources>
    <string name="app_name">CoroutinesExample</string>
    <string name="logTitle">Лог</string>
    <string name="loClearButton">Очистить</string>
    <string name="buttonGo">Перейти</string>
    <string name="autoscrollOn">Выкл автоскролл</string>
    <string name="autoscrollOff">Вкл автоскролл</string>
    <string name="openExample">Открыт пример: %1$s</string>
    <string name="quitExample">Закрыт пример: %1$s</string>
    <string name="titleDispatchers">Диспетчеры</string>
    <string name="dispatchersCase1">Дефолтный диспетчер. Смотрим какой диспетчер создается без явного указания диспетчера</string>
    <string name="dispatchersCase2">Дефолтный диспетчер. Смотрим сколько максимум одновременных потоков может быть при использовании дефолтного диспетчера</string>
    <string name="dispatchersCase3">IO диспетчер. Смотрим сколько максимум одновременных потоков может быть при использовании IO диспетчера</string>
    <string name="dispatchersCase4">Создание собственного диспетчера с одним потоком</string>
    <string name="dispatchersCase5">Unconfined диспетчер. Особенности работы</string>
    <string name="titleErrors">Ошибки</string>
    <string name="errorsCase1">Отмена скоупа и всех дочерних корутин при ошибке внутри try-catch внутри дочерней корутины</string>
    <string name="errorsCase2">Обработчик ошибок вместо try-catch</string>
    <string name="errorsCase3">Обработчик ошибок + SupervisorJob в скоупе</string>
    <string name="errorsCase4">Обработчик ошибок + SupervisorJob в корутине. Несколько корутин на одном уровне</string>
    <string name="errorsCase5">Билдер launch + async корутина + await. Проверка что не выполняется код после await при возникновении ошибки</string>
    <string name="errorsCase6">Билдер launch + async корутина + await. Используем try-catch, проверяем что после await при возникновении ошибки код выполняется</string>
    <string name="errorsCase7">Ошибка в suspend функции корутины. Try-catch</string>
    <string name="titleBuilders">Билдеры</string>
    <string name="buildersCase1">Билдер async. Получаем результат методом await</string>
    <string name="buildersCase2">Билдер launch. Запуск дочерних корутин так, чтобы родительская не дожидалась их завершения и так, чтобы дожидалась.</string>
    <string name="buildersCase3">Билдер async. Запуск дочерних корутин с получением от них результата, параллельный запуск.</string>
    <string name="buildersCase4">Билдеры launch и async. Ленивый старт корутины</string>
    <string name="titleSuspend">Suspend функции</string>
    <string name="suspendCase1">Проверяем то что suspend функция не блокирует поток</string>
    <string name="titleCoroutines">Корутины</string>
    <string name="coroutinesCase1">ЖЦ корутины</string>
    <string name="coroutinesCase2">Неправильная отмена корутины</string>
    <string name="coroutinesCase3">Правильная отмена корутины</string>
    <string name="coroutinesCase4">Дожидаемся выполнения корутины с помощью join</string>
    <string name="coroutinesCase5">Параллельная работа внутри родительской корутины с использованием join</string>
    <string name="coroutinesCase6">Ленивое создание корутины</string>
    <string name="coroutinesCase7">Отмена корутины + invokeOnCancellation</string>
    <string name="coroutinesCase8">Используем NonCancellableJob</string>
    <string name="coroutinesCase9">Параллельный запуск корутин</string>
    <string name="coroutinesCase10">Работа с одной переменной разными способами</string>
    <string name="coroutinesCase11">Наследование в корутинах</string>
    <string name="coroutinesCase12">Защита от повторных вызовов с помощью Job</string>
    <string name="coroutinesCase13">Проверяем что родительская корутина ждет завершения дочерней</string>
    <string name="titleScope">Скоуп</string>
    <string name="scopeCase1">Отмена скоупа вместе с его корутинами</string>
    <string name="scopeCase2">Создаем иерархию корутин и отменяем их по-разному, смотрим что происходит</string>
    <string name="scopeCase3">Создаем свой объект и добавляем его в контекст скоупа</string>
    <string name="scopeCase4">Проверяем что контекст передается корутинам по наследству + меняем контекст при создании дочерней корутины</string>
    <string name="titleScopeFunctions">Скоуп функции</string>
    <string name="scopeFunctionsCase1">Создаем и отменяем корутины</string>
    <string name="scopeFunctionsCase2">Создаем и отменяем корутины + SupervisorScope</string>
    <string name="scopeFunctionsCase3">Используем withContext для замены контекста</string>
    <string name="scopeFunctionsCase4">Используем runBlocking чтобы заблокировать поток</string>
    <string name="scopeFunctionsCase5">Используем viewmodelScope</string>
    <string name="scopeFunctionsCase6">Используем lifecycleScope</string>
    <string name="scopeFunctionsCase7">Используем mainScope</string>
    <string name="scopeFunctionsCase8">Создаем свой скоуп</string>
    <string name="titleChannels">Каналы</string>
    <string name="channelsCase1">Самое просто использование канала. Одной корутиной складываем, второй достаем</string>
    <string name="channelsCase2">Складываем в канал больше чем могут получить</string>
    <string name="channelsCase3">Складываем в канал меньше чем могут получить</string>
    <string name="channelsCase4">Закрываем канал и ловим ексепшн от этого</string>
    <string name="channelsCase5">Заворачиваем получение из канала в цикл, смотрим что получится</string>
    <string name="channelsCase6">Закрываем канал и используем isClosedForReceive</string>
    <string name="channelsCase7">Увеличиваем размер канала через capacity</string>
    <string name="channelsCase8">Увеличиваем размер канала через Channel.Factory.CONFLATED</string>
    <string name="channelsCase9">Отменяем канал</string>
    <string name="channelsCase10">Отменяем корутину, но не канал</string>
    <string name="channelsCase11">Закрываем канал при отмене корутины через колбек invokeOnCompletion</string>
    <string name="channelsCase12">Используем канал несколькими корутинами</string>
    <string name="channelsCase13">Пробуем слать в канал через trySend</string>
    <string name="titleFlow">Флоу</string>
    <string name="flowCase1">Создаем стандартный флоу, проверяем холодность</string>
    <string name="flowCase2">Создаем стандартный флоу через asFlow</string>
    <string name="flowCase3">Создаем стандартный флоу через flowOf</string>
    <string name="buildersCase2Title">По кнопке А создается родительская корутина с двумя дочерними, родительская не дожидается выполнения дочерних. По кнопке Б условия те же, но родительская корутина дожидается завершения дочерних и только потом продолжается.</string>
    <string name="buildersCase2ButtonA">Создать корутины под кейс А</string>
    <string name="buildersCase2ButtonB">Создать корутины под кейс Б</string>
    <string name="buildersCase3Title">В кейсе А запускаем дочерние корутины async билдером, дожидаемся родительской корутиной завершения работы. Во кейсе Б последовательно вызываем суспенд функции и дожидаемся результата в родительской корутине. В кейсе С параллельно вызываем суспенд функции и дожидаемся результата в родительской корутине.</string>
    <string name="buildersCase3ButtonA">Кейс А</string>
    <string name="buildersCase3ButtonB">Кейс Б</string>
    <string name="buildersCase3ButtonC">Кейс C</string>
    <string name="flowsCase5Title">Каждая кнопка будет создавать флоу, через секунду подписывать на него подписчика и на каждой кнопке будет свой intermediate оператор для изменения потока данных. Список с кнопками листается вниз. В каждом флоу 10 элементов - 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 и a, b, c, d, e, f, g, h, i, j</string>
    <string name="flowsCase5ButtonMap">map</string>
    <string name="flowsCase5ButtonFilter">filter</string>
    <string name="flowsCase5ButtonTake">take</string>
    <string name="flowsCase5ButtonZip">zip</string>
    <string name="flowsCase5ButtonCombine">combine</string>
    <string name="flowsCase5ButtonWithIndex">withIndex</string>
    <string name="flowsCase5ButtonScan">scan</string>
    <string name="flowsCase5ButtonDebounce">debounce</string>
    <string name="flowsCase5ButtonDistinctUntilChanged">distinctUntilChanged</string>
    <string name="flowsCase5ButtonDrop">drop</string>
    <string name="flowsCase5ButtonSample">sample</string>
    <string name="flowsCase5TVMap">map применяет к элементам потока функцию преобразования.</string>
    <string name="flowsCase5TVFilter">filter фильтрует поток, оставляя те элементы, которые соответствуют условию.</string>
    <string name="flowsCase5TVTake">take выбирает из потока определенное количество элементов.</string>
    <string name="flowsCase5TVZip">zip из двух потоков создает один, применяя к их элементам функцию преобразования.</string>
    <string name="flowsCase5TVCombine">combine объединяет два потока в один, после применения к их элементам функции преобразования.</string>
    <string name="flowsCase5TVWithIndex">withIndex оборачивает флоу в IndexedValue, в результате каждый элемент становится парой с индексом, индекс начинается с 0.</string>
    <string name="flowsCase5TVDebounce">debounce возвращает флоу, который выпускает самое последнее значение за указанный промежуток времени.</string>
    <string name="flowsCase5TVScan">scan связывает флоу с операцией, выдавая каждый промежуточный результат, считая начальное значение</string>
    <string name="flowsCase5TVDistinctUntilChanged">distinctUntilChange возвращает флоу, в котором следующее значение идет, только если оно отличается от предыдущего</string>
    <string name="flowsCase5TVDrop">drop исключает из начала потока определенное количество значений и возвращает полученный поток.</string>
    <string name="flowsCase5TVSample">sample даст только последний элемент за указанный период времени.</string>
    <string name="flowsCase8ButtonCollect">collect</string>
    <string name="flowsCase8TVCollect">Используется для сбора и обработки результатов флоу. Ожидает, пока все значения, производимые в рамках этой корутины будут получены, и затем возвращает список этих значений. При этом блокирует выполнение текущей корутины до тех пор, пока все значения не будут получены.</string>
    <string name="flowsCase8ButtonSingle">single</string>
    <string name="flowsCase8TVSingle">Ждет только одно значение от флоу. Бросает NuSuchElementException если флоу пустой и IllegalArgumentException если значений больше одного.</string>
    <string name="flowsCase8ButtonReduce">reduce</string>
    <string name="flowsCase8TVReduce">Каким-то образом агрегирует полученные от флоу данные.</string>
    <string name="flowsCase8ButtonCount">count</string>
    <string name="flowsCase8ButtonFirst">first</string>
    <string name="flowsCase8ButtonToList">toList</string>
    <string name="flowsCase8ButtonToSet">toSet</string>
    <string name="flowsCase8ButtonFold">fold</string>
    <string name="flowsCase8TVCount">Оператор count позволяет применить какой-то предикат к элементам флоу и посчитать количество элементов, которые ему удовлетворяют</string>
    <string name="flowsCase8TVFirst">Получает только первое значение флоу и затем отменяет его.</string>
    <string name="flowsCase8TVToList">Перегоняет элементы флоу в лист</string>
    <string name="flowsCase8TVToSet">Перегоняет элементы флоу в сет</string>
    <string name="flowsCase8TVFold">Возвращает результат операций с флоу</string>
    <string name="flowsCase9Title">Создадим 4 разных флоу и в каждом используем intermediate операторы, не рассмотренные ранее. Как и с остальными intermediate операторами, они могут работать в цепочке.</string>
    <string name="flowsCase9ButtonOnEach">onEach</string>
    <string name="flowsCase9ButtonOnStart">onStart</string>
    <string name="flowsCase9ButtonOnCompletion">onCompletion</string>
    <string name="flowsCase9ButtonOnEmpty">onEmpty</string>
    <string name="flowsCase9ButtonEach">Все кроме onEmpty</string>
</resources>