<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/description"
            style="@style/CaseTitle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/flowsCase9Title"
            />

        <Button
            android:id="@+id/buttonOnEach"
            style="@style/Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/description"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="@dimen/margin_x2"
            android:text="@string/flowsCase9ButtonOnEach"
            />

        <Button
            android:id="@+id/buttonOnStart"
            style="@style/Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/buttonOnEach"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="@dimen/margin_x2"
            android:text="@string/flowsCase9ButtonOnStart"
            />

        <Button
            android:id="@+id/buttonOnCompletion"
            style="@style/Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/buttonOnStart"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="@dimen/margin_x2"
            android:text="@string/flowsCase9ButtonOnCompletion"
            />

        <Button
            android:id="@+id/buttonOnEmpty"
            style="@style/Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/buttonOnCompletion"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="@dimen/margin_x2"
            android:text="@string/flowsCase9ButtonOnEmpty"
            />

        <Button
            android:id="@+id/buttonEach"
            style="@style/Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/buttonOnEmpty"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="@dimen/margin_x2"
            android:text="@string/flowsCase9ButtonEach"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>