<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/description"
        style="@style/CaseTitle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/buildersCase2Title"
        />

    <Button
        android:id="@+id/buttonA"
        style="@style/Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/description"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/margin_x2"
        android:text="@string/buildersCase2ButtonA"
        />

    <Button
        android:id="@+id/buttonB"
        style="@style/Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/buttonA"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/margin_x2"
        android:text="@string/buildersCase2ButtonB"
        />
</androidx.constraintlayout.widget.ConstraintLayout>